--- a/about.html
+++ b/about.html
@@ -122,7 +122,7 @@
             </div>
             <div id="burger" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                 <hr> <li><a href="#">Home</a></li>
+                 <hr> <li><a href="./index.html">Home</a></li>
                   <li><a href="./product page.html">Product</a></li>
                   <li  class="active"><a href="./about.html">About</a></li>
                   <li><a href="./contact.html">Contact</a></li><hr>
