--- a/product page.html
+++ b/product page.html
@@ -449,7 +449,7 @@
             </div>
             <div id="burger" class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                 <hr> <li><a href="./home.html">Home</a></li>
+                 <hr> <li><a href="./index.html">Home</a></li>
                   <li  class="active"><a href="#">Product</a></li>
                   <li><a href="./about.html">About</a></li>
                   <li><a href="./contact.html">Contact</a></li><hr>
